--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,10 @@
 repos:
+  - repo: local
+    hooks:
+      - id: run-go-tests
+        name: Run Go Tests
+        entry: make test
+        language: system
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
@@ -6,11 +12,3 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-  - repo: https://github.com/dnephin/pre-commit-golang
-    rev: v0.5.0
-    hooks:
-      - id: go-fmt
-      - id: go-imports
-      - id: no-go-testing
-      - id: golangci-lint
-      - id: go-unit-tests
