--- a/dev/docker/docker-compose-app.yml
+++ b/dev/docker/docker-compose-app.yml
@@ -3,8 +3,8 @@ version: '3.9'
 services:
   balancer:
     build:
-      context: .
-      dockerfile: ./Dockerfile
+      context: ../../
+      dockerfile: ./dev/docker/Dockerfile
     ports:
       - "50051:50051"
     env_file:
@@ -13,8 +13,8 @@ services:
 
   gateway:
     build:
-      context: .
-      dockerfile: ./Dockerfile.gateway
+      context: ../../
+      dockerfile: ./dev/docker/Dockerfile.gateway
     container_name: gateway
     depends_on:
       - balancer
